[package]
name = "sui_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrome-driver-rs = "0.1.3"
serde = "1.0.228"
serde_json = "1.0.145"
thirtyfour = "0.36.1"
tokio = { version = "1.47.1", features = ["full"] }
